Fixed: switcher sec spacing

--- a/themes/inbeat/assets/scss/pages/_creatorstudiov2.scss
+++ b/themes/inbeat/assets/scss/pages/_creatorstudiov2.scss
@@ -109,6 +109,8 @@
 }
 #switcher__creator-studio{
     background: #28161C;
+    padding-top: 155px;
+    padding-bottom: 155px;
 }
 #what-we-do_creator-studio{
     background-color: #F9F7F7;
